--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obsidian-sample-plugin",
+  "name": "obsidian-to-anki-fork-plugin",
   "version": "0.9.7",
   "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
   "main": "main.js",
@@ -12,20 +12,28 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-inject": "^5.0.3",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.1.0",
     "@types/node": "^14.14.2",
-    "@types/showdown": "^1.9.3",
+    "@types/showdown": "~2.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "eslint": "^8.32.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "rollup": "^2.32.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
-    "showdown-highlight": "^2.1.5",
+    "showdown-highlight": "~3.0",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "byte-base64": "^1.1.0",
-    "showdown": "^1.9.1",
+    "showdown": "~2.0",
     "ts-md5": "^1.2.7"
   }
 }
